--- a/tets/ui.html
+++ b/tets/ui.html
@@ -1,5 +1,5 @@
 <h2>Shape Creator</h2>
-<p>Count: <input id="count" type="number" ></p>
+<!-- <p>Count: <input id="count" type="number" ></p> -->
 <button id="create">New</button>
 <button id="cancel">Cancel</button>
 <button id="Hello">Hello</button>
