--- a/tets/ui.html
+++ b/tets/ui.html
@@ -6,8 +6,8 @@
 <button id="create">New</button>
 <button id="close">Close</button>
 <!-- <button id="Hello">Hello</button> -->
-<button id="layer">Layer</button>
-<button id="layers-look">View layers</button>
+<!-- <button id="layer">Layer</button> -->
+<button id="layers-look">View layer options</button>
 <!-- <button id="brush">Brush</button>   -->
 </body>
 
@@ -33,10 +33,10 @@ document.getElementById('close').onclick = () => {
 //parent.postMessage({pluginMessage: {type: 'Hello'} },'*')
 //}
 
-document.getElementById('layer').onclick =() =>{
-  //pravq now layer izpolzvam nov component
-  parent.postMessage({pluginMessage:{type: 'create-layer'}}, '*')
-}
+// document.getElementById('layer').onclick =() =>{
+//   //pravq now layer izpolzvam nov component
+//   parent.postMessage({pluginMessage:{type: 'create-layer'}}, '*')
+// }
 
 document.getElementById('layers-look').onclick =() =>{
   parent.postMessage({pluginMessage:{type:'layers-look'}}, '*')
