--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -54,7 +54,8 @@
     parent.postMessage({pluginMessage: {type: 'merge'}}, '*')
   }
 
-  parent.onmessage = msg => {
+  window.onmessage = (e) => console.log("UI LOG", e.data.pluginMessage);
+  window.onmessage = (msg) => {
         if (msg.pluginMessage.type === 'not-selected') {
           parent.postMessage({ pluginMessage: { type: 'close' } }, '*')
           // console.log('Showing pop-up');
