--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -56,11 +56,11 @@
 
   // window.onmessage = (e) => console.log("UI LOG", e.data.pluginMessage);
   window.onmessage = (msg) => {
-        if (msg.type === 'not-selected') {
-          parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
+        if (msg.data.pluginMessage.type === 'not-selected') {
+          // parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
           // console.log('Showing pop-up');
-          // document.getElementById('overlay').style.display = 'block';
-          // document.getElementById('popup').style.display = 'block';
+          document.getElementById('overlay').style.display = 'block';
+          document.getElementById('popup').style.display = 'block';
         }
     };
 
