--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -3,41 +3,31 @@
   .popup {
       display: none;
       position: fixed;
-      top: 2%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 20px;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-      z-index: 2;
-  }
-
-  .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
+      bottom: 2%;
+      left: 0%;
+      /* left: 50%; */
       width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0);
-      z-index: 1;
+      height: 25%;
+      /* transform: translate(-50%, -50%); */
+      /* padding: 20px; */
+      background-color: #610923;
+      /* border: 1px solid #ccc; */
+      /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
+      z-index: 2;
   }
 </style>
 
 <body style=" background-color: #2E2929; color: #CCCCCC;">
 
-  <h2>Artify</h2>
+  <h2>Layer management</h2>
   <button id="create">New layer</button>
   <button id="filter">Add filter</button>
   <button id="merge">Merge layers</button>
   
-  <!-- <button onclick="showPopup()">Show Popup</button> -->
-  
   <div class="overlay" id="overlay"></div>
   <div class="popup" id="popup">
-      <p>This is a pop-up message!</p>
-      <!-- <button onclick="hidePopup()">Close</button> -->
+      <p style="margin-left:2%">Make sure to select at least two layers <br>
+        and try again</p>
   </div>
   
 
@@ -52,36 +42,16 @@
 
   document.getElementById('merge').onclick = () =>{
     parent.postMessage({pluginMessage: {type: 'merge'}}, '*')
+    document.getElementById('popup').style.display = 'none';
   }
 
   // window.onmessage = (e) => console.log("UI LOG", e.data.pluginMessage);
   window.onmessage = (msg) => {
         if (msg.data.pluginMessage.type === 'not-selected') {
-          // parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
-          // console.log('Showing pop-up');
-          document.getElementById('overlay').style.display = 'block';
           document.getElementById('popup').style.display = 'block';
         }
     };
 
-//   window.addEventListener('message', (event) => {
-//     console.log('Received message:', event.data);
-//     if (event.data.pluginMessage.type === 'not-selected') {
-//         console.log('Showing pop-up');
-//         document.getElementById('overlay').style.display = 'block';
-//         document.getElementById('popup').style.display = 'block';
-//     }
-// });
-
-
-  // onmessage('not-selected'){
-  //         document.getElementById('overlay').style.display = 'block';
-  //         document.getElementById('popup').style.display = 'block';
-  //}
-      // function hidePopup() {
-      //     document.getElementById('overlay').style.display = 'none';
-      //     document.getElementById('popup').style.display = 'none';
-      // }
   
   </script>
   
