--- a/tets/frame.html
+++ b/tets/frame.html
@@ -1,6 +1,6 @@
 <!-- <link rel="stylesheet" href="styles.css"> -->
 
-<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Righteous', sans-serif;">
+<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Lato', serif;">
 
     <h2>Artify</h2>
     <!-- <p>Count: <input id="count" type="number" ></p> -->
