--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -1,37 +1,82 @@
-<!-- <link rel="stylesheet" href="styles.css"> -->
 <style>
+   .title{
+    margin-top: 5%; 
+    margin-left: 3%; 
+    font-size: 25px;
+  }
+
+  .button {
+    width: 100%;
+    height: 20%;
+    background-color: #2E2929;
+    color: #FFF;
+    font-family: "Alata", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: left;
+    padding: 10px;
+  }
+
+  .button-cont {
+    display: flex;
+  }
+
+  .half-button {
+    width: 50%;
+    height: 20%;
+    background-color: #2E2929;
+    color: #FFF;
+    font-family: "Alata", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .text {
+    color: #8E81AE;
+    font-family: "Alata", sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 3%;
+    margin-top: -5%;
+  }
+
   .popup {
       display: none;
       position: fixed;
       bottom: 2%;
       left: 0%;
-      /* left: 50%; */
       width: 100%;
       height: 25%;
-      /* transform: translate(-50%, -50%); */
-      /* padding: 20px; */
       background-color: #610923;
-      /* border: 1px solid #ccc; */
-      /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
       z-index: 2;
+  }
+  .popup-text{
+    margin-left:2%;
   }
 </style>
 
-<body style=" background-color: #2E2929; color: #CCCCCC;">
+<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata, serif;">
 
-  <h2>Layer management</h2>
-  <button id="create">New layer</button>
-  <button id="filter">Add filter</button>
-  <button id="merge">Merge layers</button>
+  <h2 class="title">ArtiFig</h2>
+  <button id="create" class="button">New layer</button>
+  <button id="filter" class="button">Add filter</button>
+  <button id="merge" class="button">Merge layers</button>
   
   <div class="overlay" id="overlay"></div>
   <div class="popup" id="popup">
-      <p style="margin-left:2%">Make sure to select at least two layers <br>
+      <p>Make sure to select at least two layers <br>
         and try again</p>
   </div>
-  
+</body>
 
-  <script>
+<script>
+
   document.getElementById('create').onclick = () => { 
   parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
   }
@@ -45,13 +90,10 @@
     document.getElementById('popup').style.display = 'none';
   }
 
-  // window.onmessage = (e) => console.log("UI LOG", e.data.pluginMessage);
   window.onmessage = (msg) => {
         if (msg.data.pluginMessage.type === 'not-selected') {
           document.getElementById('popup').style.display = 'block';
         }
     };
 
-  
-  </script>
-  
+</script>
