--- a/tets/ui.html
+++ b/tets/ui.html
@@ -40,6 +40,21 @@
     margin-left: 3%;
     margin-top: -5%;
   }
+
+  .popup {
+    display: none;
+    position: fixed;
+    top: 2%;
+    left: 0%;
+    width: 100%;
+    height: 25%;
+    background-color: #61092394;
+    z-index: 2;
+  }
+
+  .popup-text {
+    margin-left: 2%;
+  }
 </style>
 
 <body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
@@ -54,6 +69,10 @@
   <button id="brush" class="button">Eraser</button>  
   <button id="brush" class="button">Bucket</button>  
 
+  <div class="popup" id="popup-save">
+    <p class="popup-text">Make sure to select the frame you want to save 
+      and try again</p>
+  </div>
 
   <div class="button-cont">
     <button id="save" class="half-button">Save</button>
@@ -76,8 +95,20 @@
     parent.postMessage({ pluginMessage: { type: 'close' } }, '*')
   }
 
+  document.getElementById('save').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'save' } }, '*')
+    document.getElementById('popup').style.display = 'none'
+  }
+
   document.getElementById('layers-look').onclick = () => {
     parent.postMessage({ pluginMessage: { type: 'layers-look' } }, '*')
+  }
+
+  window.onmessage = (msg) => {
+    if (msg.data.pluginMessage.type === 'cant-save') {
+      document.getElementById('popup-save').style.display = 'block'
+    }
+
   }
 
   // document.getElementById('brush').onclick =() =>{
