--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -1,7 +1,7 @@
 <style>
-   .title{
-    margin-top: 5%; 
-    margin-left: 3%; 
+  .title {
+    margin-top: 5%;
+    margin-left: 3%;
     font-size: 25px;
   }
 
@@ -47,53 +47,78 @@
   }
 
   .popup {
-      display: none;
-      position: fixed;
-      bottom: 2%;
-      left: 0%;
-      width: 100%;
-      height: 25%;
-      background-color: #610923;
-      z-index: 2;
+    display: none;
+    position: fixed;
+    top: 2%;
+    left: 0%;
+    width: 100%;
+    height: 25%;
+    background-color: #610923;
+    z-index: 2;
   }
-  .popup-text{
-    margin-left:2%;
+
+  .popup-text {
+    margin-left: 2%;
   }
 </style>
 
-<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata, serif;">
+<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
 
-  <h2 class="title">ArtiFig</h2>
+  <h2 class="title">Layer management</h2>
   <button id="create" class="button">New layer</button>
   <button id="filter" class="button">Add filter</button>
   <button id="merge" class="button">Merge layers</button>
-  
-  <div class="overlay" id="overlay"></div>
-  <div class="popup" id="popup">
-      <p>Make sure to select at least two layers <br>
-        and try again</p>
+
+  <!-- <div class="overlay" id="overlay"></div> -->
+  <div class="popup" id="popup-merge">
+    <p class="popup-text">Make sure to select at least two layers <br>
+      and try again</p>
+  </div>
+
+  <div class="popup" id="popup-save">
+    <p>Make sure to select the frame you want to save<br>
+      and try again</p>
+  </div>
+
+  <div class="button-cont">
+    <button id="save" class="half-button">Save</button>
+    <button id="back" class="half-button">Back</button>
   </div>
 </body>
 
 <script>
 
-  document.getElementById('create').onclick = () => { 
-  parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
-  }
-  
-  document.getElementById('filter').onclick = () =>{
-    parent.postMessage({pluginMessage: {type: 'filter'}}, '*')
+  document.getElementById('create').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
   }
 
-  document.getElementById('merge').onclick = () =>{
-    parent.postMessage({pluginMessage: {type: 'merge'}}, '*')
-    document.getElementById('popup').style.display = 'none';
+  document.getElementById('filter').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'filter' } }, '*')
+  }
+
+  document.getElementById('merge').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'merge' } }, '*')
+    document.getElementById('popup').style.display = 'none'
+  }
+
+  document.getElementById('back').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'back' } }, '*')
+  }
+
+  document.getElementById('save').onclick = () => {
+    parent.postMessage({ pluginMessage: { type: 'save' } }, '*')
+    document.getElementById('popup').style.display = 'none'
   }
 
   window.onmessage = (msg) => {
-        if (msg.data.pluginMessage.type === 'not-selected') {
-          document.getElementById('popup').style.display = 'block';
-        }
-    };
+    if (msg.data.pluginMessage.type === 'not-selected') {
+      document.getElementById('popup-merge').style.display = 'block'
+    }
+
+    if (msg.data.pluginMessage.type === 'cant-save') {
+      document.getElementById('popup-save').style.display = 'block'
+    }
+
+  }
 
 </script>
