--- a/tets/ui.html
+++ b/tets/ui.html
@@ -16,11 +16,12 @@
 
   .button-cont {
     display: flex;
+    height: 20%;
   }
 
   .half-button {
     width: 50%;
-    height: 20%;
+    height: 100%;
     background-color: #2E2929;
     color: #FFF;
     font-family: "Alata", sans-serif;
@@ -70,8 +71,7 @@
   <button id="brush" class="button">Bucket</button>  
 
   <div class="popup" id="popup-save">
-    <p class="popup-text">Make sure to select the frame you want to save 
-      and try again</p>
+    <p class="popup-text">Make sure to select the frame you want to save and try again</p>
   </div>
 
   <div class="button-cont">
