--- a/tets/ui.html
+++ b/tets/ui.html
@@ -45,16 +45,17 @@
   .popup {
     display: none;
     position: fixed;
-    top: 2%;
+    top: 0%;
     left: 0%;
     width: 100%;
     height: 25%;
-    background-color: #61092394;
+    background-color: #610923b4;
     z-index: 2;
   }
 
   .popup-text {
     margin-left: 2%;
+    margin-top: 2%;
   }
 </style>
 
