--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -50,16 +50,17 @@
   .popup {
     display: none;
     position: fixed;
-    top: 2%;
+    top: 0%;
     left: 0%;
     width: 100%;
     height: 25%;
-    background-color: #610923;
+    background-color: #610923b4;
     z-index: 2;
   }
 
   .popup-text {
     margin-left: 2%;
+    margin-top: 0%;
   }
 </style>
 
@@ -72,13 +73,12 @@
 
   <!-- <div class="overlay" id="overlay"></div> -->
   <div class="popup" id="popup-merge">
-    <p class="popup-text">Make sure to select at least two layers <br>
+    <p class="popup-text">Make sure to select at least two layers 
       and try again</p>
   </div>
 
   <div class="popup" id="popup-save">
-    <p>Make sure to select the frame you want to save<br>
-      and try again</p>
+    <p class="popup-text">Make sure to select the frame you want to save and try again</p>
   </div>
 
   <div class="button-cont">
