--- a/tets/ui.html
+++ b/tets/ui.html
@@ -1,4 +1,3 @@
-<!-- <link rel="stylesheet" href="styles.css"> -->
 <style>
   
   .button {
@@ -13,7 +12,25 @@
     line-height: normal;
     text-align: left;
     padding: 10px;
+    transition: background-color 0.2s ease;
+    border-style: solid;
+    border-top: 1%;
+    border-top-color: #5C5470;
+    border-top-width: 1%;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    box-shadow: none;
   }
+
+.button:hover {
+    background-color: #3e3a3a; 
+}
+
+.button:active {
+    background-color: #5C5470; 
+}
+
 
   .button-cont {
     display: flex;
@@ -30,7 +47,32 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    border-top: 1% ;
+    border-top-style: solid; 
+    border-top-color:  #5C5470;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
   }
+
+  #save{
+    border-right: 0.5%;
+    border-right-style: solid;
+    border-right-color: #5C5470;
+  }
+
+  .half-button:hover {
+    background-color: #3e3a3a;
+  }
+
+  #save:active {
+    background-color: #094E3D;
+  }
+
+  #close:active {
+    background-color: #610923;
+  }
+
 
   .text {
     color: #8E81AE;
@@ -60,17 +102,16 @@
   }
 </style>
 
-<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
+<body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
 
   <h2 style="margin-top: 5%; margin-left: 3%; font-size: 25px;">ArtiFig</h2>
   <h4 class="text">Make you design easier and more unique with some of your own art! </h4>
-  <!-- <p>Count: <input id="count" type="number" ></p> -->
 
   <button id="create" class="button">New</button>
   <button id="layers-look" class="button">View layer options</button>
   <button id="brush" class="button">Brush</button>  
-  <button id="brush" class="button">Eraser</button>  
-  <button id="brush" class="button">Bucket</button>  
+  <button id="eraser" class="button">Eraser</button>  
+  <button id="bucket" class="button">Bucket</button>  
 
   <div class="popup" id="popup-save">
     <p class="popup-text">Make sure to select the frame you want to save and try again</p>
