--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -52,15 +52,15 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    border-top: 1% ;
-    border-top-style: solid; 
-    border-top-color:  #5C5470;
+    border-top: 1%;
+    border-top-style: solid;
+    border-top-color: #5C5470;
     border-left: none;
     border-right: none;
     border-bottom: none;
   }
 
-  #save{
+  #save {
     border-right: 0.5%;
     border-right-style: solid;
     border-right-color: #5C5470;
@@ -104,14 +104,82 @@
     margin-left: 2%;
     margin-top: 0%;
   }
+
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+  }
+
+  .drop-btn{
+    width: 100%;
+    height: 10%;
+    background-color: #5C5470;
+    color: #FFF;
+    font-family: "Alata", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: left;
+    padding: 10px;
+    transition: background-color 0.2s ease;
+    border-style: solid;
+    border-top: 1%;
+    border-top-color: #2E2929;
+    border-top-width: 1%;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    box-shadow: none;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {
+    display: block;
+  }
 </style>
 
 <body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
 
   <h2 class="title">Layer management</h2>
   <button id="create" class="button">New layer</button>
-  <button id="filter" class="button">Add filter</button>
+  <!-- <button id="filter" class="button">Add filter</button> -->
   <button id="merge" class="button">Merge layers</button>
+
+  <div class="dropdown">
+    <button onclick="myFunction()" class="button">Add filter</button>
+    <div id="myDropdown" class="dropdown-content">
+      <button id="drop-btn" class="drop-btn">Blur</button>
+      <button id="drop-btn" class="drop-btn">Sharpness</button>
+      <button id="drop-btn" class="drop-btn">Inverted</button>
+    </div>
+  </div>
 
   <div class="popup" id="popup-merge">
     <p class="popup-text">Make sure to select at least two layers
@@ -121,6 +189,7 @@
   <div class="popup" id="popup-save">
     <p class="popup-text">Make sure to select the frame you want to save and try again</p>
   </div>
+
 
   <div class="button-cont">
     <button id="save" class="half-button">Save</button>
@@ -161,6 +230,24 @@
       document.getElementById('popup-save').style.display = 'block'
     }
 
+  }
+
+  function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+  }
+
+  // Close the dropdown menu if the user clicks outside of it
+  window.onclick = function (event) {
+    if (!event.target.matches('.button')) {
+      var dropdowns = document.getElementsByClassName("dropdown-content");
+      var i;
+      for (i = 0; i < dropdowns.length; i++) {
+        var openDropdown = dropdowns[i];
+        if (openDropdown.classList.contains('show')) {
+          openDropdown.classList.remove('show');
+        }
+      }
+    }
   }
 
 </script>
