--- a/tets/ui.html
+++ b/tets/ui.html
@@ -166,7 +166,7 @@
     // else {
 
     // parent.postMessage({ pluginMessage: { type: 'save' } }, '*')
-    document.getElementById('popup').style.display = 'none'
+    document.getElementById('popup-save').style.display = 'none'
     // }
   }
 
