--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -169,7 +169,7 @@
 
   <h2 class="title">Layer management</h2>
   <button id="create" class="button">New layer</button>
-  <!-- <button id="filter" class="button">Add filter</button> -->
+  <button id="filter" class="button">Add filter</button>
   <button id="merge" class="button">Merge layers</button>
 
   <div class="dropdown">
