--- a/tets/ui.html
+++ b/tets/ui.html
@@ -1,4 +1,107 @@
-<link rel="stylesheet" href="styles.css">
+<!-- <link rel="stylesheet" href="styles.css"> -->
+<style>
+  .button {
+  width: 100%;
+  height: 20%;
+  background-color: #2E2929;
+  color: #FFF;
+  font-family: "Alata", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: left;
+  padding: 10px;
+  transition: background-color 0.2s ease;
+  border-style: solid;
+  border-top: 1%;
+  border-top-color: #5C5470;
+  border-top-width: 1%;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  box-shadow: none;
+}
+
+.button:hover {
+  background-color: #3e3a3a;
+}
+
+.button:active {
+  background-color: #5C5470;
+}
+
+
+.button-cont {
+  display: flex;
+  height: 20%;
+}
+
+.half-button {
+  width: 50%;
+  height: 100%;
+  background-color: #2E2929;
+  color: #FFF;
+  font-family: "Alata", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-top: 1%;
+  border-top-style: solid;
+  border-top-color: #5C5470;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+#save {
+  border-right: 0.5%;
+  border-right-style: solid;
+  border-right-color: #5C5470;
+}
+
+.half-button:hover {
+  background-color: #3e3a3a;
+}
+
+#save:active {
+  background-color: #094E3D;
+}
+
+#close:active {
+  background-color: #610923;
+}
+
+
+.text {
+  color: #8E81AE;
+  font-family: "Alata", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 3%;
+  margin-top: -5%;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 25%;
+  background-color: #610923b4;
+  z-index: 2;
+}
+
+.popup-text {
+  margin-left: 2%;
+  margin-top: 2%;
+}
+</style>
+
 <body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
 
   <h2 style="margin-top: 5%; margin-left: 3%; font-size: 25px;">ArtiFig</h2>
@@ -72,15 +175,17 @@
     parent.postMessage({ pluginMessage: { type: 'layers-look' } }, '*')
   }
 
-  window.onmessage = async (msg) => {
+  window.onmessage = (msg) => {
     if (msg.data.pluginMessage.type === 'cant-save') {
       document.getElementById('popup-save').style.display = 'block'
     }
     if (msg.data.pluginMessage.type === 'can-save') {
-      const imageBytes = await figma.currentPage.selection[0].exportAsync({ format: 'PNG' })
+      const imageBytes = msg.data.pluginMessage.data[0]
+      const name = msg.data.pluginMessage.data[1]
+
+      // const imageBytes = await figma.currentPage.selection[0].exportAsync({ format: 'PNG' })
       const imageBlob = new Blob([imageBytes], { type: 'image/png' })
-      let name = figma.currentPage.selection[0].name
-      saveAs(imageBlob, names)
+      saveAs(imageBlob, name)
     }
   }
 
