ni6to su6testveno

--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -229,13 +229,13 @@
     parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
   }
 
-  document.getElementById('sharpness').onclick = () => {
-    parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
-  }
+  // document.getElementById('sharpness').onclick = () => {
+  //   parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
+  // }
 
-  document.getElementById('inverted').onclick = () => {
-    parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
-  }
+  // document.getElementById('inverted').onclick = () => {
+  //   parent.postMessage({ pluginMessage: { type: 'create-layer' } }, '*')
+  // }
   // document.getElementById('filter').onclick = () => {
   //   parent.postMessage({ pluginMessage: { type: 'filter' } }, '*')
   // }
